# ChangeLog for gnome-base/orbit
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/orbit/ChangeLog,v 1.157 2010/01/18 00:01:13 jer Exp $

  18 Jan 2010; Jeroen Roovers <jer@gentoo.org> orbit-2.14.17.ebuild:
  Stable for HPPA (bug #281427).

  16 Jan 2010; Raúl Porcel <armin76@gentoo.org> orbit-2.14.17.ebuild:
  sh stable

  03 Dec 2009; Brent Baude <ranger@gentoo.org> orbit-2.14.17.ebuild:
  Marking orbit-2.14.17 ppc64 stable for bug 281427

  28 Nov 2009; Raúl Porcel <armin76@gentoo.org> orbit-2.14.17.ebuild:
  alpha/ia64/sparc stable wrt #281427

  05 Nov 2009; Markus Meier <maekke@gentoo.org> orbit-2.14.17.ebuild:
  arm stable, bug #281427

  24 Oct 2009; nixnut <nixnut@gentoo.org> orbit-2.14.17.ebuild:
  ppc stable #281427

  16 Oct 2009; Markus Meier <maekke@gentoo.org> orbit-2.14.17.ebuild:
  x86 stable, bug #281427

  08 Oct 2009; Olivier Crête <tester@gentoo.org> orbit-2.14.17.ebuild:
  Stable on amd64, bug #281427

  02 Aug 2009; Gilles Dartiguelongue <eva@gentoo.org> orbit-2.14.17.ebuild:
  Fix test killing wrong process, bug #268142.

  17 Mar 2009; Mart Raudsepp <leio@gentoo.org> orbit-2.14.17.ebuild:
  Fix cross-compilation, bug 262741. Thanks to Maksim Melnikau.

*orbit-2.14.17 (08 Mar 2009)

  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org> -orbit-2.14.12.ebuild,
  -orbit-2.14.13.ebuild, -orbit-2.14.14.ebuild, +orbit-2.14.17.ebuild:
  Bump to 2.14.17. Build fixes and enhancements to linc. Clean up
  old revisions.

  06 Mar 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking orbit-2.14.16 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> orbit-2.14.16.ebuild:
  stable ppc, bug 255848

  15 Feb 2009; Raúl Porcel <armin76@gentoo.org> orbit-2.14.16.ebuild:
  arm/ia64/sh stable wrt #255848

  10 Feb 2009; Tiago Cunha <tcunha@gentoo.org> orbit-2.14.16.ebuild:
  stable sparc, bug 255848

  07 Feb 2009; Jeroen Roovers <jer@gentoo.org> orbit-2.14.16.ebuild: