@@ -6,7 +6,9 @@ AUX orbit-2.14.17-interix.patch 457 RMD160 51557795a6ee8d0a024035733fbf21c5c9dda
 AUX orbit-2.14.17-winnt.patch 1002 RMD160 125f6657e8e43d27adc76c5908a11ad601387686 SHA1 ede0d9d6d0f63f5ee8f07d4336c18880bc398a64 SHA256 4d01387cf77981b9e0d786e3cb3b78ce695725ebe98e93815c71ed4a773128b8
 DIST ORBit2-2.14.16.tar.bz2 739458 RMD160 69a76a246d06f10708cfda9c420be173e0746b39 SHA1 d366a92f8ce1989caf21cc6884f90cbcad42ea59 SHA256 e7bc69a316e6e2a263987a0aec5c6249dc152361e9559b4818a680681409aac1
 DIST ORBit2-2.14.17.tar.bz2 747503 RMD160 7e76fe543163fe9763e4a7e293640c7c87a160e8 SHA1 d1f38e9df5efc219f3a5cfb4d0a0cbc1b381fe1c SHA256 62bfce3f678f9347a19c766944e8aef7b89bc32b25ac23eb3e4c25929ce8974c
+DIST ORBit2-2.14.18.tar.bz2 747701 RMD160 8105c7323869be38a21de562878150f25da17f17 SHA1 76074570d3fc08d4e62d37f02023fe1af3b7be3f SHA256 c6148edd8044255aeed9ab1d1eeb3c39edd0aa1ace5d33cf6831b80d11f1ab7c
 EBUILD orbit-2.14.16.ebuild 1795 RMD160 d42897bb3189475f6f2135e71d7f65b140110d65 SHA1 7df1a7e2a5ac3dd22757114d83f1b9db6c9e7108 SHA256 9014fc681324a6ec672a13d05eb7432873676b69cf5dbb2cf85f6cafa189681c
 EBUILD orbit-2.14.17.ebuild 2376 RMD160 2227f76d9cf913fb6223c5737a0ef1521064213f SHA1 5774cbf7aa33e053d05d3c4d5931a3142b3e93b9 SHA256 5335ed6a5fc540b7793a522519554a3039ae1521de1bd7603e548b820af9d2d6
-MISC ChangeLog 19287 RMD160 b5f60a9f6553bbc5032461336a5f820e2aea4701 SHA1 59b4a2ecf3ac6b3debb7eb386c23b38579b43084 SHA256 f0019ecb5af97c59d1fe7a7bafd04c598ea65bb291b1c61e4c9b7ec1132d8a9f
+EBUILD orbit-2.14.18.ebuild 2378 RMD160 050fbd4b5ebf59793f59c7dc822d20210ca58feb SHA1 5d4dc8a7276990b748e6d1725b34736b56410067 SHA256 ae4a8bfd6bc8759c472f5ec9d461813c7a243d580f83b4ff1d125406deb4da59
+MISC ChangeLog 19662 RMD160 acdb6c445809231967fbd7a1d78c24cfaf7888bc SHA1 e56f608fea9f8766a28121072922571e79bae0b6 SHA256 01ee510422459944e5ec40d659706b99cd15ece152b18bdbe61091a68e50cf5b
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
